# sacas-daemon

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
docs/: SACAS Protocol - Gameplay Guide.md
proto/: game.proto
src/: config.rs  karma_sync.rs  main.rs  state.rs  types.rs
src/combat/: client.rs  mod.rs
src/daemon/: mod.rs
src/device/: anti_vm.rs  fingerprint.rs  identity.rs  mod.rs  registration.rs  validator.rs
src/grpc/: mod.rs  service.rs
src/mining/: engine.rs  mod.rs
src/moltbook/: client.rs  mod.rs
src/network/: mod.rs  probe.rs
src/radar/: client.rs  mod.rs
src/sync/: mod.rs  signed_sync.rs
src/websocket/: client.rs  mod.rs
