[package]
name = "sacas-daemon"
version = "1.0.0"
edition = "2021"
authors = ["SACAS Team"]

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# gRPC
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
ed25519-dalek = "2.1"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
hex = "0.4"  # For signature encoding

# Networking
surge-ping = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# UUID for nonce generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# CLI and URL utilities
clap = { version = "4.3", features = ["derive"] }
urlencoding = "2.1"

# Error handling
thiserror = "1.0"

# Config
config = "0.14"

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
